2004-03-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_texinfo_helper): Typos in comment.

2004-03-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess: New upstream version.

	Fix for PR automake/285:
	* automake.in (handle_ltlibraries): Keep track of installation
	directories for each condition, then define a $(am_TARGET_rpath)
	variable to hold the -rpath flags of Libtool libraries conditionally
	installed in different directories.
	* lib/Automake/DisjConditions.pm (merge): New function.
	* tests/libtool6.test: Adjust.
	* tests/libtool8.test: New file.
	* tests/Makefile.am (TEST): Add libtool8.test.

	* lib/Automake/Variable.pm (traverse_recursively,
	_do_recursive_traversal): Honor the skip_ac_subst option.
	* automake.in (handle_dist): Use skip_ac_subst.

2004-02-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* Makefile.am (cvs-release): Upload to ~ftp/pub/automake, not
	~ftp/automake.
	* lib/gnupload (Example): Update example.

	* lib/config-ml.in, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: New upstream versions.

	* m4/depend.m4 (_AM_DEPENDENCIES): Use `touch' rather than `: >'
	to create numbered dependencies.  This fixes a portability issue
	when CONFIG_SHELL is forced to /bin/sh on Solaris 8.
	Reported by Mark Phillips.

	* automake.in (lang_yacc_target_hook): Use Automake::Rule::define
	so that rules for the same headers are not output twice.
	* lib/Automake/Variable.pm (value_as_list_recursive): Do not
	call `return' inside `map'.
	* tests/cond30.test: Make sure `a.c' and `b.c' both appear
	in the Makefile.in.
	* tests/cond35.test, tests/cond36.test: New files.
	* tests/Makefile.am (TESTS): Add cond35.test and cond36.test.
	Report from Roman Fietze.

	Fix for PR/413:
	* lib/am/distdir.am (distcheck): Create $dc_destdir with `umask
	077 && mkdir' instead of `$(mkdir_p)'.  This prevents possible
	symlink attacks reported by Stefan Nordhausen.

2004-02-16  Alexandre Duret-Lutz  <adl@gnu.org>
