@@ -1,3 +1,10 @@
+2004-03-19  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	Overriding JAVAROOT is legitimate, do not warn about it.
+	* lib/Automake/Variable.pm (%_silent_variable_override): Add JAVAROOT.
+	* tests/java2.test: Run automake without -Wno-override.
+	Report from Simon Josefsson.
+
 2004-03-14  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (handle_texinfo_helper): Typos in comment.
